<resources>
    <string name="app_name">FInals1</string>
    <string name="smartlearn_title">SmartLearn</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="logout">Logout</string>
    <!-- Home page strings -->
    <string name="welcome_plain">Welcome</string>
    <string name="welcome_with_email">Welcome, %1$s</string>
    <!-- Create set UI strings -->
    <string name="create_set">Create a flashcard set</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="add_card">Add card</string>
    <string name="save_set">Save set</string>
    <string name="enter_term">Enter term</string>
    <string name="enter_definition">Enter definition</string>
    <string name="add_two_cards_msg">You need at least two cards to create a set.</string>
    <string name="set_saved">Set saved</string>
    <string name="your_sets">Your Sets</string>
    <string name="sets">Sets</string>
    <string name="flashcards">Flashcards</string>
    <string name="add_flashcard">Add A Flashcard</string>
    <string name="quiz">Quiz</string>
    <string name="set_daily_practice_time">Set daily practice time</string>
    <!-- Dictionary UI strings -->
    <string name="hint_enter_word">Enter word</string>
    <string name="action_lookup">Lookup</string>
    <string name="hint_flip">Tap to flip</string>
    <string name="hint_flip_back">Tap to flip back</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
</resources>